Re-added graphql test (more tests needed) Small restructurings and bugfixes in OIAs
